--- a/knowledge/arts/music/fandom/swifties/qna.yaml
+++ b/knowledge/arts/music/fandom/swifties/qna.yaml
@@ -167,7 +167,7 @@ document_outline: |
   they came to be, and their relationship with Taylor Swift.
 
 document:
-  repo: https://github.com/juliadenham/Summit_knowledge.git
-  commit: 5f7158a5ce83c4ff493bfe341fe31ecad64ff697
+  repo: https://github.com/mprahl/Summit_knowledge.git
+  commit: 9dd7b77b04f77a9a71708f2c36e23ac055a91d75
   patterns:
-    - swifties.md
+    - swifties.pdf
